--- a/index.html
+++ b/index.html
@@ -214,6 +214,113 @@
       </div>
     </section>
 
+
+
+    <section id="client" class="">
+      <div
+        class="
+          client-cap
+          d-flex
+          justify-content-center
+          align-items-center
+          flex-column
+          pt-5
+        "
+      >
+        <h2>Our <span class="fw-bold"> Client</span></h2>
+        <p>
+          It is a long established fact that a reader will be of a page when
+          established fact looking at its layout.
+        </p>
+      </div>
+      <div class="client-slide">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="client my-5 text-center">
+                <i class="fas fa-quote-right fa-2x"></i>
+                <div class="client-img my-3">
+                  <img
+                    src="imgs/testi/testi-1.jpg"
+                    class="rounded-circle img-thumbnail"
+                    alt="..."
+                  />
+                </div>
+                <p class="text-muted mx-auto client-pp">
+                  " The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here."
+                </p>
+                <p>- Ebony verty,<span class="fw-bold"> Envato</span></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="client my-5 text-center">
+                <i class="fas fa-quote-right fa-2x"></i>
+                <div class="client-img my-3">
+                  <img
+                    src="imgs/testi/testi-2.jpg"
+                    class="rounded-circle img-thumbnail"
+                    alt="..."
+                  />
+                </div>
+                <p class="text-muted mx-auto client-pp">
+                  " The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here."
+                </p>
+                <p>- Ebony verty,<span class="fw-bold"> Envato</span></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="client my-5 text-center">
+                <i class="fas fa-quote-right fa-2x"></i>
+                <div class="client-img my-3">
+                  <img
+                    src="imgs/testi/testi-3.jpg"
+                    class="rounded-circle img-thumbnail"
+                    alt="..."
+                  />
+                </div>
+                <p class="text-muted mx-auto client-pp">
+                  " The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here."
+                </p>
+                <p>- Ebony verty,<span class="fw-bold"> Envato</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-indicators position-static">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- --------------End of client------------ -->
     <!-- --------------Start of portfolio------------ -->
     <section id="portfolio" class="my-5">
@@ -788,6 +895,7 @@
         </div>
       </div>
     </section>
+    
     <!-- --------------End of portfolio------------ -->
     <!-- --------------Start of About------------ -->
 
